Made some changes to the code.

--- a/app/login.html
+++ b/app/login.html
@@ -18,11 +18,11 @@
     </style>
   </head>
   <body>
-    <form action="/login" method="post" name="loginForm">
-      <input type="text" name="username" placeholder="Username">
+    <form action="/login" method="post" name="loginForm" autocomplete="off">
+      <input type="text" name="username" placeholder="Username" autocomplete="off" autofocus>
       <br>
-      <input type="password" name="password" placeholder="Password">
 
+      <input type="password" name="password" placeholder="Password">
       <br>
 
       <button type="submit">Login</button>
