--- a/app/about.html
+++ b/app/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Express Homepage.</title>
+    <title>About.</title>
     <style>
       body {
         font-family: Helvetica, Sans-serif;
@@ -39,6 +39,6 @@
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
-    <h4>This is the Express homepage.</h4>
+    <h4>This is the About us page.</h4>
   </body>
 </html>
